Implementacion de bases estructural en el html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>hola pe </h1>
+  <h1>Tienda virtual de hardware </h1>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
